--- a/templates/project/about.html.twig
+++ b/templates/project/about.html.twig
@@ -20,7 +20,8 @@
 <a href="{{ asset("../docs/api") }}">Phpdoc</a><br>
 <a href="{{ asset("../docs/metrics") }}">Phpmetrics</a><br>
 <a href="https://github.com/Aeen/anns21-mvc">GitHub</a><br>
-<a href="https://scrutinizer-ci.com/g/Aeen/anns21-mvc/inspections">Scrutinizer</a><br><br>
+<a href="https://scrutinizer-ci.com/g/Aeen/anns21-mvc/inspections">Scrutinizer</a>
+<a href="{{ path("cleancode") }}">Clean code</a><br><br>
 <a href="{{ path("reset-database") }}">Återställ databas</a>
 
 
